crates/sdk-tests/tests/endpoint/endpoint_and_ctor_fails.stderr
error: #[ctor]` and `#[endpoint]` can't co-exist.
 --> $DIR/endpoint_and_ctor_fails.rs:3:1
  |
3 | #[template]
  | ^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `template` (in Nightly builds, run with -Z macro-backtrace for more info)
