crates/sdk-tests/tests/endpoint/endpoint_and_ctor_fails.rs
use svm_sdk::template;

#[template]
mod Template {
    #[ctor]
    #[endpoint]
    fn get() {}
}

fn main() {}
